k8s/actual-budget/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    gethomepage.dev/href: 'https://actual-budget.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: actual-budget
    gethomepage.dev/group: Home
    gethomepage.dev/icon: actual
    gethomepage.dev/name: Actual Budget
spec:
  ingressClassName: nginx
  rules:
    - host: actual-budget.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: web
